--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -1390,7 +1390,7 @@
                 <br/>
                 <p>
                     Your microbiome is a rainforest of diverse microbes dominated
-                    by bacteria - some 40 trillion bacteria, weighing around 1 lb,
+                    by microbes - some 40 trillion bacteria, weighing around 1 lb,
                     live all over and in your body. The diversity of your
                     microbiome, how similar it is to other peoples', and the types
                     of bacteria living inside you have all been linked to health,
