Use pngs to avoid inconsistencies from Illustrator to browser

--- a/microsetta_interface/templates/home.jinja2
+++ b/microsetta_interface/templates/home.jinja2
@@ -19,7 +19,7 @@
 {% block content %}
     <div class="row">
       <div class="col-12 col-lg-8 text-center how_it_works">
-          <img src="/static/img/{{ _("en_us") }}/how-it-works.svg" class="img-fluid" />
+          <img src="/static/img/{{ _("en_us") }}/how-it-works.png" class="img-fluid" height="75%" width="75%" />
       </div>
       <div class="col-12 col-lg-4 text-center" style="background: white;">
           <div class="row h-25"></div>
