--- a/microsetta_interface/templates/email_confirmation.jinja2
+++ b/microsetta_interface/templates/email_confirmation.jinja2
@@ -30,7 +30,7 @@
             <li>{{ _('Email wrong or didn\'t receive an email?') }} <a href="{{ authrocket_url }}/profile">{{ _('Go to your AuthRocket Profile') }} &rarr;</a> {{ _('to update your email or resend a verification email') }}.</li>
         </ul>
         <h4>
-            <strong>{{ _('You can close this browser tab!') }}</strong> {{ ('After email verification, a new tab will automatically open, and you will proceed with filling out your profile details') }}.
+            <strong>{{ _('You can close this browser tab!') }}</strong> {{ _('After email verification, a new tab will automatically open, and you will proceed with filling out your profile details') }}.
         </h4>
         &nbsp;&nbsp;
     </div>
