--- a/microsetta_interface/templates/account_details.jinja2
+++ b/microsetta_interface/templates/account_details.jinja2
@@ -167,8 +167,8 @@
                 <label for="language" name="language_label">{{ _('Preferred language for future communications') }}*</label>
                 <br>
                 <select id="language" name="language">
-                    <option value="en-US" {% if account.language == "en-US" %} selected {% endif %} >English</option>
-                    <option value="es-MX" {% if account.language == "es-MX" %} selected {% endif %} >Español</option>
+                    <option value="en_US" {% if account.language == "en_US" %} selected {% endif %} >English</option>
+                    <option value="es_MX" {% if account.language == "es_MX" %} selected {% endif %} >Español</option>
                 </select>
             </div>
             {% if CREATE_ACCT %}
