--- a/microsetta_interface/templates/account_details.jinja2
+++ b/microsetta_interface/templates/account_details.jinja2
@@ -135,15 +135,6 @@
                 <input id="last_name" name="last_name" class="form-control" value="{{account.last_name |e}}" type="text" />
             </div>
             <div class="form-group">
-                <p>
-                <strong>{{ _('Note to non-US/GB users') }}:</strong> {{ _('We are working on support for additional countries and expect to have that available soon.') }}
-                </p>
-                <select id="country_code" name="country_code">
-                    <option value="US" {% if account.address.country_code == "US" %} selected {% endif %} >{{ _('United States') }}</option>
-                    <option value="GB" {% if account.address.country_code == "GB" %} selected {% endif %} >{{ _('United Kingdom') }}</option>
-                </select>
-            </div>
-            <div class="form-group">
                 <label for="street" id="street_label" >{{ _('Street Address') }}*</label>
                 <input id="street" name="street" class="form-control" value="{{account.address.street |e}}" type="text" />
             </div>
@@ -162,6 +153,15 @@
             <div class="form-group">
                 <label for="post_code" id="post_code_label"></label>
                 <input id="post_code" name="post_code" class="form-control" value="{{account.address.post_code |e}}" type="text" />
+            </div>
+            <div class="form-group">
+                <label for="country_code" id="country_code_label">{{ _('Country*') }}</label>
+                <br>
+                <select id="country_code" name="country_code">
+                    <option value="MX" {% if account.address.country_code == "MX" %} selected {% endif %} >{{ _('Mexico') }}</option>
+                    <option value="US" {% if account.address.country_code == "US" %} selected {% endif %} >{{ _('United States') }}</option>
+                    <option value="GB" {% if account.address.country_code == "GB" %} selected {% endif %} >{{ _('United Kingdom') }}</option>
+                </select>
             </div>
             <div class="form-group">
                 <label for="language" name="language_label">{{ _('Preferred language for future communications') }}*</label>
