Hacky workaround for the hardcoded ' selected' in vue form generator checklist's Vue template.  Will break on updating vfg.js.  It is now required to set a global _SELECTED field before including the vfg.js file for i18n

--- a/microsetta_interface/templates/survey.jinja2
+++ b/microsetta_interface/templates/survey.jinja2
@@ -3,6 +3,11 @@
 {% set show_breadcrumbs = True %}
 {% block head %}
     <script type="text/javascript" src="/static/vendor/js/vue-2.5.17.min.js"></script>
+
+    <script type="text/javascript">
+        // Override the hardecoded " selected" string in vfg.js
+        _SELECTED = "{{ _(' selected') }}"
+    </script>
     <script type="text/javascript" src="/static/vendor/vue-form-generator-2.3.4/vfg.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/vendor/vue-form-generator-2.3.4/vfg.css">
     <style type="text/css">
