--- a/microsetta_interface/templates/account_details.jinja2
+++ b/microsetta_interface/templates/account_details.jinja2
@@ -135,7 +135,7 @@
                 <input id="last_name" name="last_name" class="form-control" value="{{account.last_name |e}}" type="text" />
             </div>
             <div class="form-group">
-                <label for="country_code" id="country_code_label">{{ _('Country*') }}</label>
+                <label for="country_code" id="country_code_label">{{ _('Country') }}*</label>
                 <br>
                 <select id="country_code" name="country_code">
                     <option value="MX" {% if account.address.country_code == "MX" %} selected {% endif %} >{{ _('Mexico') }}</option>
