--- a/microsetta_interface/templates/account_details.jinja2
+++ b/microsetta_interface/templates/account_details.jinja2
@@ -95,7 +95,7 @@
 
                     for (var country of COUNTRIES_LIST)
                     {
-                        if (country.country != "Mexico")
+                        if (country.country !== "Mexico")
                             continue;
 
                         for (var state of country.states)
