--- a/microsetta_interface/templates/account_details.jinja2
+++ b/microsetta_interface/templates/account_details.jinja2
@@ -87,7 +87,7 @@
                         }
                     }
                 }
-                else if (code == "MX") {
+                else if (code === "MX") {
                     $("#city_label").text("{{ _('City') }}*");
                     $("#state_label").text("{{ _('State') }}*");
                     $("#post_code_label").text("{{ _('Zip Code') }}*");
