--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -1678,7 +1678,7 @@
                       <table id="taxonomyTable" class="display" style="width:100%">
                         <thead>
                         <tr>
-                          <th>{{ _('Pct of Sample') }}</th>
+                          <th>{{ _('%% of Sample') }}</th>
                           <th>{{ _('Kingdom') }}</th>
                           <th>{{ _('Phylum') }}</th>
                           <th>{{ _('Class') }}</th>
