--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -820,7 +820,7 @@
                 }
                 display[cat] = {}
                 if(chosen in dynamic_text_dictionary) {
-                    display[cat]["response"] = dynamic_text_dictionary[chosen]
+                    display[cat]["response"] = dynamic_text_dictionary[chosen];
                 } else {
                     display[cat]["response"] = chosen;
                 }
