--- a/microsetta_interface/templates/survey.jinja2
+++ b/microsetta_interface/templates/survey.jinja2
@@ -10,6 +10,11 @@
     <script type="text/javascript" src="/static/vendor/vue-form-generator-2.3.4/vfg.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/vendor/vue-form-generator-2.3.4/vfg.css">
     <style type="text/css">
+        img#bristol-chart {
+            height: auto;
+            width: 50%;
+        }
+
         .vue-form-generator .field-radios .radio-list label {
             padding-right: 25px;
             display: inline-block;
