FIX empress playground page title

--- a/microsetta_interface/templates/empress-playground.jinja2
+++ b/microsetta_interface/templates/empress-playground.jinja2
@@ -1,5 +1,5 @@
 {% extends "sitebase.jinja2" %}
-{% set page_title = "Emperor Playground" %}
+{% set page_title = "Empress Playground" %}
 {% set show_breadcrumbs = False %}
 {% set show_logout = True %}
 {% block head %}
