--- a/microsetta_interface/templates/sample.jinja2
+++ b/microsetta_interface/templates/sample.jinja2
@@ -19,7 +19,7 @@
             preventImplicitSubmission(form_name);
 
             // TODO - this parsing will break for one part and three part language tags.
-            let lang = "{{ _("en_us") }}";
+            let lang = "{{ _(EN_US_KEY) }}";
             let first = lang.split("_")[0];
             let second = lang.split("_")[1];
 
