--- a/microsetta_interface/templates/account_details.jinja2
+++ b/microsetta_interface/templates/account_details.jinja2
@@ -193,8 +193,11 @@
                 <label for="language" name="language_label">{{ _('Preferred language for future communications') }}*</label>
                 <br>
                 <select id="language" name="language">
-                    <option value="en_US" {% if account.language == "en_US" %} selected {% endif %} >English</option>
-                    <option value="es_MX" {% if account.language == "es_MX" %} selected {% endif %} >Español</option>
+                {% for lang_key in languages %}
+                    {% set lang_val = languages[lang_key][0] %}
+                    {% set lang_display = languages[lang_key][1] %}
+                    <option value={{ lang_val }} {% if account.language == lang_val %} selected {% endif %} >{{ lang_display }}</option>
+                {% endfor %}
                 </select>
             </div>
             {% if CREATE_ACCT %}
