--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -1734,7 +1734,7 @@
                   {{ _('The results shown in the Microbiome Maps portion of the report relied on data from many different publically accessible microbiome datasets. These different datasets, and links to them, are listed below.') }}
                   </p>
 
-                  <h5>{{ _('The Microsetta Initiatiave') }}</h5>
+                  <h5>{{ _('The Microsetta Initiative') }}</h5>
                   <ul>
                         <span id="dataset_links_tmi" class="info-loader text-success" >DATASET_LINKS</span>
                   </ul>
