--- a/microsetta_interface/templates/account_details.jinja2
+++ b/microsetta_interface/templates/account_details.jinja2
@@ -194,8 +194,8 @@
                 <br>
                 <select id="language" name="language">
                 {% for lang_key in languages %}
-                    {% set lang_val = languages[lang_key][0] %}
-                    {% set lang_display = languages[lang_key][1] %}
+                    {% set lang_val = languages[lang_key].value %}
+                    {% set lang_display = languages[lang_key].display_text %}
                     <option value={{ lang_val }} {% if account.language == lang_val %} selected {% endif %} >{{ lang_display }}</option>
                 {% endfor %}
                 </select>
