--- a/microsetta_interface/templates/account_overview.jinja2
+++ b/microsetta_interface/templates/account_overview.jinja2
@@ -59,7 +59,7 @@
 <div class="container">
 {% if sources|length == 0 %}
     <div class="alert alert-success" role="alert">
-        {{ _('You have now set up your profile for your account! Please proceed to identify your source.') }}
+        {{ _('You have now set up your account! Please proceed to identify your source.') }}
     </div>
 {% endif %}
 {% if sources|length > 0 %}
