--- a/microsetta_interface/templates/email_confirmation.jinja2
+++ b/microsetta_interface/templates/email_confirmation.jinja2
@@ -27,10 +27,10 @@
         <ul>
             <li>{{ _('Please check both your spam and inbox') }}</li>
             <li>{{ _('AuthRocket is our authentication service') }}</li>
-            <li>{{ _('Email wrong or didn\'t receive an email?') }} <a href="{{ authrocket_url }}/profile">{{ _('Go to your AuthRocket Profile') }} &rarr;</a> {{ _('to update your email or resend a verification email') }}.</li>
+            <li>{{ _('Email wrong or didn\'t receive an email?') }} <a href="{{ authrocket_url }}/profile">{{ _('Go to your AuthRocket Account') }} &rarr;</a> {{ _('to update your email or resend a verification email') }}.</li>
         </ul>
         <h4>
-            <strong>{{ _('You can close this browser tab!') }}</strong> {{ _('After email verification, a new tab will automatically open, and you will proceed with filling out your profile details') }}.
+            <strong>{{ _('You can close this browser tab!') }}</strong> {{ _('After email verification, a new tab will automatically open, and you will proceed with filling out your account details') }}.
         </h4>
         &nbsp;&nbsp;
     </div>
